--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ h1 {
 }
 
 .container {
+  position: relative;
   width: 1140px;
   margin: 0 auto;
 }
@@ -88,8 +89,7 @@ h2.title {
   cursor: pointer;
   outline: none;
 }
-.more {
-}
+
 .more .more_text {
   color: #ffffff;
   font-family: "Roboto - Thin";
@@ -107,11 +107,12 @@ h2.title {
 }
 
 .waiting {
-  height: 604px;
+  min-height: 604px;
   background-color: #efefef;
   padding: 85px 0 75px 0;
 }
-.waiting .waiting_header {
+.waiting .waiting_header,
+.finish .finish_header {
   color: #252525;
   font-family: Roboto;
   font-size: 30px;
@@ -119,8 +120,12 @@ h2.title {
   text-transform: uppercase;
   text-align: center;
 }
+.finish .finish_header {
+  color: #ffffff;
+}
 
-.waiting .waiting_divider {
+.waiting .waiting_divider,
+.finish .finish_divider {
   width: 217px;
   height: 4px;
   background-color: #f9bf3b;
@@ -137,13 +142,12 @@ h2.title {
 }
 .waiting .waiting_wrapper {
   margin-top: 45px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .waiting .waiting_wrapper .waiting_item {
   width: 339px;
-  vertical-align: top;
-  margin: 0 15px;
-  display: inline-block;
   text-align: center;
 }
 .waiting .waiting_wrapper .waiting_item .waiting_img {
@@ -159,3 +163,96 @@ h2.title {
   line-height: 21px;
 }
 
+.optimization {
+  min-height: 550px;
+  padding: 102px 0 107px 0;
+}
+.optimization .optimization_header {
+  margin-left: 390px;
+  color: #299cbd;
+  font-family: "Roboto - Black";
+  font-size: 30px;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+.optimization .optimization_text {
+  margin-left: 390px;
+  margin-top: 25px;
+  color: #4a4a4a;
+  font-family: "Roboto - Light";
+  font-size: 17px;
+  font-weight: 300;
+  line-height: 27px;
+}
+.optimization .optimization_text span {
+  font-family: "Roboto - Bold";
+  font-weight: 700;
+}
+.optimization .optimization_img {
+  position: absolute;
+  top: -54px;
+  left: -240px;
+  z-index: -1;
+}
+.finish {
+  min-height: 447px;
+  padding: 86px 0 79px 0;
+  background: url("../img/background2.png") center center/cover no-repeat;
+}
+.finish .finish_wrapper {
+  margin-top: 41px;
+  display: flex;
+  justify-content: space-between;
+}
+.finish .finish_wrapper .finish_item {
+  width: 204px;
+}
+.finish .finish_wrapper .finish_item .finish_round {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  width: 115px;
+  height: 115px;
+  background-color: #b4e2ff;
+  border-radius: 100%;
+}
+
+.finish .finish_wrapper .finish_item .finish_descr {
+  margin-top: 25px;
+  text-align: center;
+  color: #efefef;
+  font-family: Roboto;
+  font-size: 17px;
+  font-weight: 300;
+  line-height: 20px;
+}
+.present {
+  min-width: 630px;
+  padding: 85px 0;
+  background-color: #efefef;
+}
+.present .present_img {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.present .present_text {
+  width: 1140px;
+  padding: 42px 0 53px 0;
+  text-align: center;
+  font-size: 30px;
+  font-family: Roboto;
+}
+.present .present_record .present_btn {
+  padding: 30px;
+  background: rgb(39, 152, 185);
+  background: linear-gradient(
+    90deg,
+    rgba(39, 152, 185, 1) 02798b9%,
+    rgba(58, 182, 218, 1) 100%
+  );
+  text-align: center;
+  text-transform: uppercase;
+  box-shadow: inset 0 5px 0 0 rgba(0, 0, 0, 0.21);
+}
